--- a/src/Jili/ApiBundle/Resources/views/Top/market.html.twig
+++ b/src/Jili/ApiBundle/Resources/views/Top/market.html.twig
@@ -1,4 +1,4 @@
-<strong class="font18 corLightRed">商家活动</strong>
+<strong class="font18 corGlobRed">商家活动</strong>
 <ul class="clearfix">
   <div class="mask">
     <div class="moveDiv">
