single checkin button and css

--- a/src/Jili/ApiBundle/Resources/views/Top/market.html.twig
+++ b/src/Jili/ApiBundle/Resources/views/Top/market.html.twig
@@ -1,4 +1,4 @@
-<strong class="font18 corGlobRed">商家活动</strong>
+<h3 class="font18 corGlobRed"><strong>商家活动</strong></h3>
 <ul class="clearfix">
   <div class="mask">
     <div class="moveDiv">
