--- a/web/css/adMore.css
+++ b/web/css/adMore.css
@@ -37,7 +37,7 @@
 }
 .adMore article div.rule h2, .adMore article div.explain h2{
 	border-bottom: 1px solid #EDE4DF;
-    color: #EA4B11;
+    color: #e94d41;
     font-size: 14px;
     margin: 0 auto;
     padding: 20px 0 10px;
