--- a/web/css/comingSoon.css
+++ b/web/css/comingSoon.css
@@ -9,7 +9,7 @@
     width: 317px;
 }
 .comingSoon article a{
-	color:#EA4B11;
+	color:#e94d41;
 }
 .error404 article{
 	background-image: url("../images/404.jpg");
@@ -19,7 +19,7 @@
     width: 186px;
 }
 .error404 article a{
-	color:#EA4B11;
+	color:#e94d41;
 	font-size: 16px;
 	margin: 0 -17px;
 }
