--- a/web/css/indexNew.css
+++ b/web/css/indexNew.css
@@ -156,7 +156,7 @@
 }
 
 .index section .frame #marketActivity ul li .more a.moreBtn {
-	background-color: #EA4B11;
+	background-color: #e94d41;
 	color: #FFFFFF;
 	display: inline-block;
 	font-size: 12px;
