--- a/web/css140307/shopMore.css
+++ b/web/css140307/shopMore.css
@@ -2,13 +2,13 @@
 .shop-info-l{ float:left; width:240px; text-align:center; border-right:1px solid #e8e8e8;}
 .shop-info-l .shop_img{ width:180px; padding:10px 0 0 0; border:1px solid #e8e8e8; line-height:300%; margin:0 auto 15px auto;}
 .shop-info-l .shop-rebate{}
-.shop-info-l .shop-rebate em{ color:#EA4B11;}
+.shop-info-l .shop-rebate em{ color:#e94d41;}
 .shop-info-l .goBtn{ width:180px; background-color:#ff6b4f; color:#FFF; display:inline-block; padding:5px 0; font-size:14px;}
 .shop-info-r{ float:left; width:500px; margin-left:40px;}
 .shop-info-r h2{ font-size:18px; line-height:200%;}
 .shop-info-r .intro{ color:#999999;}
 .shop-info-r .rebate{ color:#999999; margin-top:15px;}
-.shop-info-r .rebate em{ color:#EA4B11;}
+.shop-info-r .rebate em{ color:#e94d41;}
 .explain{ background-color:#FFF; margin-bottom:15px; text-align:center; padding:15px 20px;}
 .explain h3{ text-align:center; width:100%; text-align:left; font-size:16px; margin-bottom:15px;}
-.shopRecommend h3{ background-color: #EA4B11;color: #FFFFFF;font-size: 14px; padding: 7px 0;text-align: center;width: 100px;}
+.shopRecommend h3{ background-color: #e94d41;color: #FFFFFF;font-size: 14px; padding: 7px 0;text-align: center;width: 100px;}
