--- a/src/Jili/ApiBundle/Resources/views/Advertiserment/server.html.twig
+++ b/src/Jili/ApiBundle/Resources/views/Advertiserment/server.html.twig
@@ -14,7 +14,7 @@
 {% include 'JiliApiBundle::header.html.twig' %}
 <div style="text-align: center;padding: 100px 0;">
 <img src="{{ asset('images/under_construction.jpg')}}">
-<p style="position: absolute; width: 100%; padding-left: 110px; line-height: 200%; font-size: 14px; top: 230px;color:#EA4B11;">更多体验广告正在导入中,<br />稍后就会上线。</p>
+<p style="position: absolute; width: 100%; padding-left: 110px; line-height: 200%; font-size: 14px; top: 230px;color:#e94d41;">更多体验广告正在导入中,<br />稍后就会上线。</p>
 </div>
 {% include 'JiliApiBundle::footer.html.twig' %}
 </body>
