--- a/web/css/history.css
+++ b/web/css/history.css
@@ -2,7 +2,7 @@
     margin-top: 30px;
 }
 .web_click_bg .cardNumberArea .copy{
-	background-color: #EA4B11;
+	background-color: #e94d41;
     color: #FFFFFF;
     display: inline-block;
     font-size: 12px;
@@ -30,7 +30,7 @@
     left: 70px;
 }
 .history .exscreen a:hover , .history .exscreen a.hover{
-	background-color: #EA4B11;
+	background-color: #e94d41;
     border: 1px solid #FFFFFF;
     color: #FFFFFF;
     font-weight: bold;
@@ -52,6 +52,8 @@
 .history h2 span{
 	color:#ff7114;
 	border-bottom:3px solid #ff7114;
+	font-family:"Microsoft Yahei",SimHei,Tahoma;
+	font-weight:bold;
 }
 .history article {
     background-color: #FFFFFF;
@@ -120,7 +122,7 @@
 }
 .history .prompt p{ line-height:22px;}
 .history .screen .lookMore{
-	background-color: #EA4B11;
+	background-color: #e94d41;
     background-image: url("../images/moreBtn.jpg");
     background-repeat: no-repeat;
     color: #FFFFFF;
@@ -134,7 +136,7 @@
 
 .web_click_bg{
 	background-color: #FFFFFF;
-    border: 3px solid #EA4B11;
+    border: 3px solid #e94d41;
     border-radius: 3px 3px 3px 3px;
     left: 650px;
     position: fixed;
@@ -143,7 +145,7 @@
     z-index: 1000;
 }
 .web_click_bg h3{
-	background-color: #EA4B11;
+	background-color: #e94d41;
 	background-image: -moz-linear-gradient(top, #FD7B19, #EC4E11); /* Firefox */
 	background-image: -webkit-gradient(linear, left top, left bottom, color-stop(0, #FD7B19), color-stop(1, #EC4E11)); /* Saf4+, Chrome */
 	filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#FD7B19', endColorstr='#EC4E11', GradientType='0'); /* IE*/
