--- a/web/css140307/categorys.css
+++ b/web/css140307/categorys.css
@@ -1,4 +1,4 @@
-.categorys h3{ color:#e94d41; font-weight:bold; height:40px; background: url("../images140307/iconImage.png") no-repeat 14px -804px #ffecea; line-height:40px; padding-left:30px; font-size:16px;}
+.categorys h3{ color:#e94d41; font-weight:bold; font-family:"Microsoft Yahei",SimHei,Tahoma; height:40px; background: url("../images140307/iconImage.png") no-repeat 14px -804px #ffecea; line-height:40px; padding-left:30px; font-size:16px;}
 .categorys ul li{ height:34px; line-height:34px; font-size:12px; color:#333; border-top:1px dotted #f8c5c1; padding-left:20px; background: url("../images140307/iconImage.png") no-repeat scroll 185px -247px #ffefef; position:relative; z-index:502;}
 .categorys ul li:hover{ color:#fff; background: url("../images140307/iconImage.png") no-repeat scroll 185px -767px #e94d41; border-top:1px solid #ff6b4f; }
 .categorys ul li h5{color: #e94d41; font-size: 14px; height: 24px; line-height: 24px; margin-top: 10px;}
