--- a/web/css140307/commodity834.css
+++ b/web/css140307/commodity834.css
@@ -1,4 +1,4 @@
-ul.commodityUl,ul.commodityByWeb{ background-color:#FFF; border-top:3px solid #EA4B11; padding:0px 0 15px 0px;}
+ul.commodityUl,ul.commodityByWeb{ background-color:#FFF; border-top:3px solid #e94d41; padding:0px 0 15px 0px;}
 ul.commodityUl.btbn{ border-top:none;}
 ul.commodityUl li,ul.commodityByWeb li{width:269px; height: 278px; border: 2px solid #fff; float: left; padding:16px 18px 0;}
 ul.commodityUl li{height: 265px; padding: 10px 18px 0;}
@@ -9,7 +9,7 @@ ul.commodityUl li dd span{ line-height:150%; width:100%; text-align:left;}
 ul.commodityUl li dd span.detail{ margin-top:8px;}
 ul.commodityUl li dd span.price,ul.commodityByWeb li dd .price{ color: #ff3e17; font-size: 24px; display:block; line-height: 115%;}
 ul.commodityUl li dd span.price em{text-decoration: line-through; margin-left:5px;}
-ul.commodityUl li dd .buyBtn{background-color: #ea4b11; border-radius: 3px; color: #FFFFFF; font-size: 12px; padding: 5px 15px; width: 50px; bottom: -65px; *bottom:48px; display: none; position: absolute; right: 0;}
+ul.commodityUl li dd .buyBtn{background-color: #e94d41; border-radius: 3px; color: #FFFFFF; font-size: 12px; padding: 5px 15px; width: 50px; bottom: -65px; *bottom:48px; display: none; position: absolute; right: 0;}
 ul.commodityUl li dd .buyBtn a{ color:#fff;}
 ul.commodityByWeb li{ width:237px; padding: 20px 18px 10px;}
 ul.commodityByWeb li dt a img{height: 200px; width: auto;}
