--- a/web/css140307/common.css
+++ b/web/css140307/common.css
@@ -85,7 +85,7 @@ select, textarea, input[type="text"], input[type="password"], input[type="dateti
 #headerContent .otherInlet{ float:right; margin-top:10px; margin-right:70px;}
 #headerContent .otherInlet .help{ font-size:16px; background:url("../images140307/iconImage.png") no-repeat scroll 0 -58px; padding-left:25px; color:#666;}
 #nav{width:100%; height:45px; line-height:45px; background-color:#e94d41;}
-#nav li{ float:left; font-size:16px; margin:0 22px; position:relative;}
+#nav li{ float:left; font-size:16px; margin:0 22px; position:relative; font-family:"Microsoft Yahei",SimHei,Tahoma;}
 #nav li.first{ margin-right:0;}
 #nav li.second{ margin-left:0;}
 #nav li.task{ width:204px; margin-left:0; background:url("../images140307/iconImage.png") no-repeat scroll 175px -193px #3598db; z-index:504; position:relative;}
@@ -97,7 +97,7 @@ select, textarea, input[type="text"], input[type="password"], input[type="dateti
 #nav li.task ul li span{ right:0; margin-right:15px; position:absolute; top:0;}
 #nav li a{ color:#FFF;}
 #nav li.task a.taskBtn{ background: url("../images140307/iconImage.png") no-repeat scroll 15px -157px; padding-left: 40px;}
-#nav li.task em{position:absolute; right: 36px; bottom: 31px; background: url("../images140307/iconImage2.png") no-repeat scroll 0 -257px; height: 24px; line-height: 24px; width: 30px; color: #fff; text-align:center; display: inline-block; font-size: 13px; font-weight:bold;}
+#nav li.task em{position:absolute; right: 36px; bottom: 31px; background: url("../images140307/iconImage2.png") no-repeat scroll 0 -257px; height: 24px; line-height: 24px; width: 26px; color: #fff; text-align:center; display: inline-block; font-size: 13px; font-weight:bold;}
 #nav li.navSelectedBg{ background:#c63128; padding:0 30px;}
 
 .main h1,.commodityList h1{ font-size:16px; line-height:40px;}
