--- a/web/css140307/screen.css
+++ b/web/css140307/screen.css
@@ -14,12 +14,12 @@
 .screen dd a.sort{ background-color:#FFF; border:1px solid #CCC;}
 .screen dd a.sort.arrowUp{ background-image:url(../images140307/iconImage.png); background-repeat:no-repeat; background-position: 87px -533px; padding-right:20px;}
 .screen dd a.sort.arrowDown{ background-image:url(../images140307/iconImage.png); background-repeat:no-repeat; background-position: 87px -493px; padding-right:20px;}
-.screen dd a:hover ,.screen dd a.hover,.screen dd a.sort.active{ background-color:#ea4b11; color:#FFF;}
-.screen dd a.sort.arrowUp:hover{ background:url(../images140307/iconImage.png) no-repeat 87px -1013px #ea4b11;}
-.screen dd a.sort.arrowDown:hover{ background:url(../images140307/iconImage.png) no-repeat 87px -973px #ea4b11;}
+.screen dd a:hover ,.screen dd a.hover,.screen dd a.sort.active{ background-color:#e94d41; color:#FFF;}
+.screen dd a.sort.arrowUp:hover{ background:url(../images140307/iconImage.png) no-repeat 87px -1013px #e94d41;}
+.screen dd a.sort.arrowDown:hover{ background:url(../images140307/iconImage.png) no-repeat 87px -973px #e94d41;}
 .screen dd a.sort.arrowUp.active{ background-position: 87px -1013px;}
 .screen dd a.sort.arrowDown.active{ background-position: 87px -973px;}
-.screen dd a.sort:hover,.screen dd a.sort.active,.screen dd a.sort.active{ border:1px solid #ea4b11;}
+.screen dd a.sort:hover,.screen dd a.sort.active,.screen dd a.sort.active{ border:1px solid #e94d41;}
 .screen dd a.unfoldBtn{ position:absolute; padding:0; right:0; top:5px; font-size:0; width:14px; height:14px; background: url("../images140307/iconImage.png") repeat scroll 0 -380px; cursor:pointer;}
 .screen dd a.unfoldBtn.already{ background-position:0 -420px;}
 .screen dd div.price{ display:inline-block; background-color:#FFF; border:1px solid #CCC; padding:3px 9px; border-radius:2px; margin-right:3px;}
