--- a/src/Jili/EmarBundle/Resources/views/Ghs/partial_on_cps.html.twig
+++ b/src/Jili/EmarBundle/Resources/views/Ghs/partial_on_cps.html.twig
@@ -1,6 +1,6 @@
 
     <div class="screen clearfix">
-      <dt class="fl w90 em">热门商品</dt>
+      <dt class="fl w90 em fontYH">热门商品</dt>
       <dd style="height: auto; width:840px; padding-right:0;" class="fl w748 h28">
 
 {% for wcatid,cat in cats %}
