--- a/web/css140307/cps.css
+++ b/web/css140307/cps.css
@@ -12,4 +12,4 @@
 .hotShop li{float: left; text-align: center;width: 33%;margin:10px 0px;}
 .hotShop p{ line-height:250%;}
 .hotShop .rebate{ color:#666;}
-.hotShop .rebate em{color:#ff6b4f;}
+.hotShop .rebate em{color:#e94d41;}
