--- a/src/Jili/EmarBundle/Resources/views/Websites/hot_on_cps.html.twig
+++ b/src/Jili/EmarBundle/Resources/views/Websites/hot_on_cps.html.twig
@@ -13,7 +13,7 @@
               {% if row.commission > 0 %}
                   <p class="rebate">最高返<em>{{  row.commission }}%</em></p>
               {% else %}
-              	  <p class="rebate">&nbsp;</p>
+       			  <p class="rebate">待&nbsp;&nbsp;&nbsp;定</p>
               {% endif %}
     
             </li>
