--- a/src/Jili/EmarBundle/Resources/views/Websites/hot_on_top.html.twig
+++ b/src/Jili/EmarBundle/Resources/views/Websites/hot_on_top.html.twig
@@ -7,6 +7,8 @@
 
         {% if row.commission > 0 %}
           <p>最高返<em class="corGlobRed">{{ row.commission }}%</em></p>
+        {% else %}
+        <p>视情况而定</p>
         {% endif %}
            </a>
         </li>
