--- a/web/css140307/common.css
+++ b/web/css140307/common.css
@@ -16,6 +16,7 @@
 .h340{ height:340px;}
 .fontOrig{font-family: Arial, Helvetica, sans-serif;}
 .fontNormal{ font-weight:normal; font-size:12px;}
+.fontYH{ font-family:'Microsoft YaHei',sans-serif;}
 .fon700{ font-weight:700;}
 .font14{ font-size:14px;}
 .font15{ font-size:15px;}
