--- a/web/css140307/index.css
+++ b/web/css140307/index.css
@@ -554,14 +554,14 @@
 #indexRecommend .iRhWrap .menu{margin-left: 10px;display: inline;}
 #indexRecommend .iRhWrap .menu a.more{background: url("../images140307/iconImage.png") no-repeat scroll 0 -897px; padding-left:20px;}
 #indexRecommend .iRcWrap{ border-top:3px solid #e0e2e6; background:#fff; padding-bottom: 10px; padding-left: 3px;}
-#indexRecommend .iRcWrap ul li { background-color: #FFFFFF; float: left; padding:15px 4px 0px 13px; width: 190px; overflow: hidden; position:relative;}
+#indexRecommend .iRcWrap ul li { background-color: #FFFFFF; float: left; padding:15px 4px 0px 13px; width: 190px; height:156px; overflow: hidden; position:relative;}
 #indexRecommend .iRcWrap ul li.mr0 { margin-right: 0;}
 #indexRecommend .iRcWrap ul li p.image a img{ width:188px; height:auto;}
 #indexRecommend .iRcWrap ul li p.image a img:hover{opacity:.8;filter:alpha(opacity = 80);-moz-opacity:.8}
 #indexRecommend .iRcWrap ul li p.name{ height:30px; overflow:hidden; margin-left: 5px;}
 #indexRecommend .iRcWrap ul li p.price { height:27px; color: #fff; line-height: 180%; position:relative; background:#e94d41; border-bottom:2px solid #c63128;}
 /*#indexRecommend .iRcWrap ul li p.price .price1{font-size: 15px; font-weight: bold;}*/
-#indexRecommend .iRcWrap ul li p.price .price2 { margin:6px 10px 0 0; line-height: 16px; padding-left: 19px; font-size: 18px;font-weight: 700; float:right; background:url(../images140307/iconImage2.png) no-repeat 0 -300px;}
+#indexRecommend .iRcWrap ul li p.price .price2 {font-size: 22px; margin:6px 10px 0 0; line-height: 13px; height: 19px; padding-left: 19px; font-weight: 700; float:right; background:url(../images140307/iconImage2.png) no-repeat 0 -300px;}
 #indexRecommend .iRcWrap ul li p.price .discount{ font-size: 12px;float: right; margin: 7px 0 0; text-align:right; line-height: 19px;} 
 #indexRecommend .iRcWrap ul li p del {margin-top: 4px; text-decoration: line-through; color:#fff; position:absolute; left:10px;}
 #indexRecommend .iRcWrap ul li .model{background: #ff6b4f;width: 175px;height: 31px;color: #fff;text-align: center;position: absolute;left: 0;bottom: 0;opacity: .85;filter: alpha(opacity=85);display:none;padding:27px 21px 24px 12px;}
