--- a/src/Jili/ApiBundle/Resources/views/Top/myTask.html.twig
+++ b/src/Jili/ApiBundle/Resources/views/Top/myTask.html.twig
@@ -4,7 +4,7 @@
 <div class="all clearfix">
   <ul id="undoTask" class="taskList clearfix">
     {% if myTask.task.game is defined and myTask.task.game==1 %}
-    <li><a href="{{ asset(path('_game_index'),'cdn1')  }}">
+    <li><a href="{{ asset(path('_game_chick'),'cdn1')  }}">
       <dt>小鸡找米</dt>
       <dd class="corDarkGray">最高<em>5888</em>米粒</dd>
       </a></li>
