--- a/src/Jili/ApiBundle/Resources/views/Top/task.html.twig
+++ b/src/Jili/ApiBundle/Resources/views/Top/task.html.twig
@@ -6,7 +6,7 @@
     {% endif %}
 
     {% if task.game is defined and task.game == 1 %}
-    <li><a href="{{ asset(path('_game_index'),'cdn1')  }}">小鸡找米<span>最高5888米粒</span></a></li>
+    <li><a href="{{ asset(path('_game_chick'),'cdn1')  }}">小鸡找米<span>最高5888米粒</span></a></li>
     {% endif %}
 
     {% if task.wen is defined and task.wen == 1 %}
