--- a/src/Jili/ApiBundle/Resources/views/Default/index.html.twig
+++ b/src/Jili/ApiBundle/Resources/views/Default/index.html.twig
@@ -192,7 +192,7 @@ function goto(cid,aid,points){
     	{% if emergency_announcement %}<div class="frame wam"><p>{{ emergency_announcement }}</p></div>{% endif %}
         <div class="frame">
             <div id="indexBanner">
-                <a class="indexBanner1" href="{{ asset(path('_game_index'),'cdn1')}}"><img src="{{ asset('images/indexBanner1.jpg') }}" alt="游戏体验"></a>
+                <a class="indexBanner1" href="{{ asset(path('_game_chick'),'cdn1')}}"><img src="{{ asset('images/indexBanner1.jpg') }}" alt="游戏体验"></a>
                 <a class="indexBanner2" href="{{ asset(path('_marketActivity_index'),'cdn1')}}"><img src="{{ asset('images/indexBanner2.jpg') }}" alt="商家活动"></a>
                 <a class="indexBanner3" href="http://www.91wenwen.net/vote/#active" target="_blank"><img src="{{ asset('images/indexBanner3.jpg') }}" alt="快速问答"></a>
                 <a class="indexBanner4" href="{{ asset(path('_advertiserment_list'),'cdn1')}}"><img src="{{ asset('images/indexBanner4.jpg') }}" alt="体验广告"><em>{{ adCheck }}</em></a>
@@ -280,7 +280,7 @@ function goto(cid,aid,points){
                 <li class="vote"><a target="_bank" href="http://www.91wenwen.net/vote/#active"><dd>91问问快速问答</dd></a></li>
                 {% endif %}
                 {% if task.game==1 %}
-                <li class="game"><a href="{{ asset(path('_game_index'),'cdn1')  }}"><dd>小鸡找米</dd><dt>最高<span>5888</span>米粒</dt></a></li>
+                <li class="game"><a href="{{ asset(path('_game_chick'),'cdn1')  }}"><dd>小鸡找米</dd><dt>最高<span>5888</span>米粒</dt></a></li>
                 {% endif %}
                 {% if task.ad==1 %}
                 <li class="advertiserment"><a href="{{ asset(path('_advertiserment_list'),'cdn1')  }}"><dd>广告任务墙</dd><dt>{{ adCheck }}</dt></a></li>
